TypedLama/regression/positive/test011.lama
-- check static type conformity of functions
-- OK function:
f :: (Int, A, B) -> Str;
fun f(i, a, b) {
  "kek"
}