TypedLama/regression/compile_error/test008.1.lama
-- scope typing
fun f(a) {
  a.string
}

fun g(b) {
  1 - b
}

-- scope 2
{
  f :: Double(Int) -> Str;
  g :: ? -> Int;


  f(g(0)) -- проверяем, что это выражение не пройдёт проверку типов
};
Unit